# RsBar

./: Cargo.toml  LICENSE  readme.md  shell.nix
client/: Cargo.toml
client/src/: bar_widget.rs  battery_widget.rs  brightness_widget.rs  hyprland_workspaces_widget.rs  main.rs  slider_widget.rs  style.css  time_widget.rs  tokio_runtime.rs  unix_sockets.rs  volume_widget.rs
daemon/: Cargo.toml
daemon/src/: battery_context.rs  brightness_context.rs  hyprland_context.rs  main.rs  rsbar_context.rs  server_context.rs  time_context.rs  volume_context.rs
src/: bar_widget.rs  brightness_widget.rs  hyprland_workspaces_widget.rs  main.rs  slider_widget.rs  style.css  volume_widget.rs
tester/: Cargo.toml  readme.md
tester/src/: main.rs
