[package]
name = "rsbar"
version = "1.0.4"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
async-channel = "2.3.1"
chrono = "0.4.38"
gtk4 = { version = "0.8.2", features = ["v4_12"] }
gtk4-layer-shell = "0.3.0"
once_cell = "1.19.0"
serde = {version="1.0.203", features=["derive"]}
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
