[package]
name = "rsbar-daemon"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
once_cell = "1.19.0"
async-trait = "0.1.82"
tokio = { version = "1.38.0", features = ["full"] }
serde = {version="1.0.203", features=["derive"]}
serde_json = "1.0.118"
log = "0.4.22"
colog = "1.3.0"
regex = "1.11.0"
brightness = "0.5.0"
futures = "0.3.31"
